# table-builder-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
table_builder_api/: manage.py  pyproject.toml
table_builder_api/api/: api.py  dynamic_model.py  exceptions.py  models.py  schemas.py  service_layer.py
table_builder_api/api/migrations/: 0001_initial.py  0002_alter_dynamictable_name.py
table_builder_api/api/tests/e2e/: test_api.py
table_builder_api/api/tests/integration/: test_schema_editor.py  test_service_layer.py
table_builder_api/api/tests/unit/: test_dynamic_model.py  test_fields_comparison.py  test_fields_conversion.py
table_builder_api/table_builder_api/: .env.sample  asgi.py  settings.py  urls.py  wsgi.py
