[tool.poetry]
name = "table-builder-api"
version = "0.1.0"
description = ""
authors = ["PitterRup <pitter.rup@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
django = "4.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
