[tool.poetry]
name = "table-builder-api"
version = "0.1.0"
description = ""
authors = ["PitterRup <pitter.rup@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
django = "4.2.3"
django-environ = "0.10.0"
psycopg2 = "2.9.6"
django-ninja = "^0.22.2"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"
pytest-django = "4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "table_builder_api.settings"
